--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -43,7 +43,7 @@
             <!-- 등장인물 이름 입력 -->
             <input type="button" value="추가" onclick="add_character()">
             <div class="character" id="character">
-                <input name="character_name" type="text" placeholder="등장인물 이름 (ex. 김첨지)" />
+                <input name="character_name" type="text" placeholder="등장인물 이름" />
 
                 <input type="button" value="삭제" onclick="remove_character(this)">
             </div>
